--- a/views/reset_password_request.tt
+++ b/views/reset_password_request.tt
@@ -12,20 +12,23 @@
   </div>
   
   <div class="login__fields">
-    [%
-      PROCESS fields/input.tt
-        id = "emailreset"
-        name = "emailreset"
-        value = ""
-        label = "Email address"
-        placeholder = "name@example.com"
-        type = "email"
-        custom_classes = ""
-        help_text = ""
-        is_html = 0
-        sub_field = ""
-        sub_params = {};
-    %]
+    <fieldset class="form-group">
+      <legend class="form-group__legend form-group__legend--hidden">Reset password</legend>
+      [%
+        PROCESS fields/input.tt
+          id = "emailreset"
+          name = "emailreset"
+          value = ""
+          label = "Email address"
+          placeholder = "name@example.com"
+          type = "email"
+          custom_classes = ""
+          help_text = ""
+          is_html = 0
+          sub_field = ""
+          sub_params = {};
+      %]
+    </fieldset>
   </div>
   
   <div class="login__btns">
