--- a/views/reset_password_request.tt
+++ b/views/reset_password_request.tt
@@ -15,18 +15,12 @@
     <fieldset class="form-group">
       <legend class="form-group__legend form-group__legend--hidden">Reset password</legend>
       [%
-        PROCESS fields/input.tt
+        INCLUDE fields/input.tt
           id = "emailreset"
           name = "emailreset"
-          value = ""
           label = "Email address"
           placeholder = "name@example.com"
-          type = "email"
-          custom_classes = ""
-          help_text = ""
-          is_html = 0
-          sub_field = ""
-          sub_params = {};
+          type = "email";
       %]
     </fieldset>
   </div>
