--- a/views/fields/input.tt
+++ b/views/fields/input.tt
@@ -1,28 +1,63 @@
+[%
+  # Template for standardized <input> fields
+  # Implementation Example:
+  #
+  # INCLUDE fields/input.tt
+  #   id = "username"
+  #   name = "username"
+  #   value = user.name
+  #   label = "Email address"
+  #   placeholder = "name@example.com"
+  #   type = "email"
+  #   custom_classes = ""
+  #   input_class = "input--required"
+  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   is_required = 0
+  #   is_html = 0
+  #   tabindex = 1
+  #   sub_field = "fields/sub/checkbox.tt"
+  #   sub_params = {
+  #     id => "remember"
+  #     name => "remember_me"
+  #     label => "Remember email address"
+  #     checked => username
+  #     tabindex => 2
+  #   };
+
+  input_class = is_required AND ! input_class.match('input--required') ? input_class _ ' input--required' : input_class;
+%]
 [% IF ! hide_group %]
 <div class="form-group">
 [% END %]
-  <div class="input">
-    <label for="[% id %]">
-      [% IF is_html; label | html; ELSE; label; END; %]
-    </label>
+  <div class="input [% input_class %]">
+    <div class="input__label">
+      <label for="[% id %]">
+        [% IF is_html; label | html; ELSE; label; END; %]
+      </label>
+      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+    </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
       [% help_text | html %]
     </p>
     [% END %]
-    <input
-      type="[% type %]"
-      class="form-control [% custom_classes %]"
-      id="[% id %]"
-      name="[% name %]"
-      placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
-      value="[% IF is_html; value | html; ELSE; value; END; %]"
-      [% IF tabindex %]tabindex="[% tabindex %]"[% END %]
-      [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
-      [% IF is_disabled %]disabled[% END %]
-    >
+    <div class="input__field">
+      <input
+        type="[% type %]"
+        class="form-control [% custom_classes %]"
+        id="[% id %]"
+        name="[% name %]"
+        placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
+        value="[% IF is_html; value | html; ELSE; value; END; %]"[% IF tabindex %]
+        tabindex="[% tabindex %]"[% END %][% IF help_text %]
+        aria-describedby="[% id %]-help"[% END %][% IF is_disabled %]
+        disabled[% END %][% IF is_required %]
+        required
+        aria-required="true"[% END %]
+      >
+    </div>
   </div>
-  [% PROCESS snippets/subfield.tt %]
+  [% INCLUDE snippets/subfield.tt %]
 [% IF ! hide_group %]
 </div>
 [% END %]
