--- a/views/fields/password.tt
+++ b/views/fields/password.tt
@@ -1,28 +1,64 @@
+[%
+  # Template for standardized <input type="password"> fields
+  # Implementation Example:
+  #
+  # INCLUDE fields/password.tt
+  #   id = "password"
+  #   name = "password"
+  #   value = ""
+  #   label = "Password"
+  #   placeholder = ""
+  #   type = "password"
+  #   custom_classes = ""
+  #   input_class = "input--password"
+  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   is_required = 0
+  #   is_html = 0
+  #   tabindex = 3
+  #   sub_field = "fields/sub/link.tt"
+  #   sub_params = {
+  #     link => "/resetpw"
+  #     label => "Reset password"
+  #   };
+
+  input_class = is_required AND ! input_class.match('input--required') ? input_class _ ' input--required' : input_class;
+%]
 [% IF ! hide_group %]
 <div class="form-group">
 [% END %]
-  <div class="input">
-    <label for="[% id %]">
-      [% IF is_html; label | html; ELSE; label; END; %]
-    </label>
+  <div class="input [% input_class %]">
+    <div class="input__label">
+      <label for="[% id %]">
+        [% IF is_html; label | html; ELSE; label; END; %]
+      </label>
+      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+    </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
       [% help_text | html %]
     </p>
     [% END %]
-    <input
-      type="password"
-      class="form-control [% custom_classes %]"
-      id="[% id %]"
-      name="[% name %]"
-      placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
-      value="[% value %]"
-      [% IF tabindex %]tabindex="[% tabindex %]"[% END %]
-      [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
-      [% IF is_disabled %]disabled[% END %]
-    >
+    <div class="input__field">
+      <input
+        type="password"
+        class="form-control [% custom_classes %]"
+        id="[% id %]"
+        name="[% name %]"
+        placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
+        value="[% value %]"[% IF tabindex %]
+        tabindex="[% tabindex %]"[% END %][% IF help_text %]
+        aria-describedby="[% id %]-help"[% END %][% IF is_disabled %]
+        disabled[% END %][% IF is_required %]
+        required
+        aria-required="true"[% END %]
+      >
+  
+      <button type="button" class="input__reveal-password">
+        <span> Reveal password </span>
+      </button>
+    </div>
   </div>
-  [% PROCESS snippets/subfield.tt %]
+  [% INCLUDE snippets/subfield.tt %]
 [% IF ! hide_group %]
 </div>
 [% END %]
