--- a/views/fields/select.tt
+++ b/views/fields/select.tt
@@ -1,25 +1,46 @@
 [%
+  # Template for standardized stylized <select> fields
+  # Implementation Example:
+  #
+  # INCLUDE fields/select.tt
+  #   id = "title"
+  #   name = "title"
+  #   value = ""
+  #   label = "Title"
+  #   placeholder = "Select title"
+  #   help_text = site.register_organisation_help
+  #   items = organisations
+  #   input_class = "input--required"
+  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   is_required = 0
+  #   is_html = 0
+  #   sub_field = ""
+  #   sub_params = {};
 
-display_placeholder = placeholder;
-display_value = "";
+  input_class = is_required AND ! input_class.match('select--required') ? input_class _ ' select--required' : input_class;
+  display_placeholder = placeholder;
+  display_value = "";
 
-IF value;
-  FOREACH item IN items;
-    IF value == item.id;
-      display_placeholder = item.name;
-      display_value = item.id;
+  IF value;
+    FOREACH item IN items;
+      IF value == item.id;
+        display_placeholder = item.name;
+        display_value = item.id;
+      END;
     END;
   END;
-END;
 %]
 
 [% IF ! hide_group %]
 <div class="form-group">
 [% END %]
-  <div class="select dropdown">
-    <label for="[% id %]" id="[% id %]-label">
-      [% IF is_html; label | html; ELSE; label; END; %]
-    </label>
+  <div class="select dropdown select--select">
+    <div class="select__label">
+      <label for="[% id %]" id="[% id %]-label">
+        [% IF is_html; label | html; ELSE; label; END; %]
+      </label>
+      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+    </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
       [% help_text | html %]
@@ -36,30 +57,30 @@ END;
       [% IF is_disabled %]aria-disabled="true"[% END %]
     >
       <span>[% IF is_html; display_placeholder | html; ELSE; display_placeholder; END; %]</span>
-      <input type="hidden" name="[% name %]" value="[% display_value %]"[% IF is_disabled %] disabled[% END %]>
-      
-      <ul
-        class="select__menu dropdown-menu"
-        aria-labelledby="[% id %]-label"
-        [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
-        role="listbox"
-      >
-        [% FOREACH item IN items %]
-        <li class="select__menu-item" role="option"[% IF value == item.id %] aria-selected="true"[% END %]>
-          <a
-            class="select__link[% IF value == item.id %] select__link--active[% END %]"
-            href="#"
-            onclick="return false;"
-            data-id="[% item.id %]"
-          >
-            [% item.name | html_entity %]
-          </a>
-        </li>
-        [% END %]
-      </ul>
     </button>
+    <input type="hidden" name="[% name %]" value="[% display_value %]"[% IF is_disabled %] disabled[% END %]>
+    
+    <ul
+      class="select__menu dropdown-menu"
+      aria-labelledby="[% id %]-label"
+      [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
+      role="listbox"
+    >
+      [% FOREACH item IN items %]
+      <li class="select__menu-item" role="option"[% IF value == item.id %] aria-selected="true"[% END %]>
+        <a
+          class="select__link[% IF value == item.id %] select__link--active[% END %]"
+          href="#"
+          onclick="return false;"
+          data-id="[% item.id %]"
+        >
+          [% item.name | html_entity %]
+        </a>
+      </li>
+      [% END %]
+    </ul>
   </div>
-  [% PROCESS snippets/subfield.tt %]
+  [% INCLUDE snippets/subfield.tt %]
 [% IF ! hide_group %]
 </div>
 [% END %]
