--- a/views/fields/textarea.tt
+++ b/views/fields/textarea.tt
@@ -1,26 +1,57 @@
+[%
+  # Template for standardized stylized <textarea> fields
+  # Implementation Example:
+  #
+  # INCLUDE fields/textarea.tt
+  #   id = "account_request_notes"
+  #   name = "account_request_notes"
+  #   value = ""
+  #   label = "Notes"
+  #   placeholder = ""
+  #   type = "email"
+  #   custom_classes = ""
+  #   help_text = site.register_notes_help
+  #   input_class = "input--required"
+  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   is_required = 0
+  #   is_html = 1
+  #   rows = 5
+  #   sub_field = ""
+  #   sub_params = {};
+
+  input_class = is_required AND ! input_class.match('input--required') ? input_class _ ' input--required' : input_class;
+%]
+
 [% IF ! hide_group %]
 <div class="form-group">
 [% END %]
-  <div class="textarea ">
-    <label for="[% id %]">
-      [% IF is_html %][% label | html %][% ELSE %][% label %][% END %]
-    </label>
+  <div class="textarea [% input_class %]">
+    <div class="input__label">
+      <label for="[% id %]">
+        [% IF is_html; label | html; ELSE; label; END; %]
+      </label>
+      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+    </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
       [% help_text | html %]
     </p>
     [% END %]
-    <textarea
-      class="form-control"
-      id="[% id %]"
-      name="[% name %]"
-      rows="[% rows %]"
-      placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
-      [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
-      [% IF is_disabled %]disabled[% END %]
-    >[% IF is_html; value | html; ELSE; value; END; %]</textarea>
-  </div>
-  [% PROCESS snippets/subfield.tt %]
+    <div class="input__field">
+      <textarea
+        class="form-control"
+        id="[% id %]"
+        name="[% name %]"
+        rows="[% rows %]"
+        placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"[% IF help_text %]
+        aria-describedby="[% id %]-help"[% END %][% IF is_disabled %]
+        disabled[% END %][% IF is_required %]
+        required
+        aria-required="true"[% END %]
+      >[% IF is_html; value | html; ELSE; value; END; %]</textarea>
+</div>
+</div>
+[% INCLUDE snippets/subfield.tt %]
 [% IF ! hide_group %]
 </div>
 [% END %]
