Add disabled class to styled select

--- a/views/fields/select.tt
+++ b/views/fields/select.tt
@@ -32,7 +32,7 @@
 [% IF ! hide_group %]
 <div class="form-group" data-test="[% IF 0 == false %]TRUE[% ELSE %]FALSE[% END %]">
 [% END %]
-  <div class="select dropdown select--select">
+  <div class="select dropdown select--select[% IF is_disabled %] select--disabled[% END %]">
     <div class="select__label">
       <label for="[% id %]" id="[% id %]-label">
         [% INCLUDE fields/sub/filter.tt value=label; %]
