--- a/views/snippets/header_detail.tt
+++ b/views/snippets/header_detail.tt
@@ -1,6 +1,6 @@
   <header class="page-header row no-gutters">
     <nav class="page-header_container">
-      <div class="col-lg-2 offset-lg-10">
+      <div class="col-lg-2 offset-lg-10 p-0">
         <div class="user dropdown">
           <button class="user__toggle btn btn-default dropdown-toggle" type="button" id="usermenu"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
