--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -18,7 +18,7 @@
           </li>
           <li class="nav__item">
             <a class="nav__link nav__link--tables" href="[% url.page %]/table/">
-              <span>[% instance_name || "Tables" | html_entity %]</span>
+              <span>Tables</span>
             </a>
           </li>
           [% IF user.permission.useradmin OR user.permission.superadmin %]
