--- a/views/tables.tt
+++ b/views/tables.tt
@@ -1,19 +1,105 @@
-<h2>Manage tables</h2>
-<p class="lead">Use this page to create, delete and edit tables. Think of a table as a sheet
-within a spreadsheet.
-</p>
-<p>
-    <a href="/table/0" class="btn btn-default" role="button">Add a new table</a>
-</p>
-<table class="table table-striped">
-    <tr>
-        <th></th>
-        <th>Name</th>
-    </tr>
-    [% FOREACH instance IN instances %]
-        <tr>
-            <td><a href="/table/[% instance.instance_id %]">Edit</a></td>
-            <td>[% instance.name | html_entity %]</td>
-        </tr>
+<div class="content-block__head row">
+  <div class="content-block__info col-lg-6">
+    <h2 class="content-block__title">
+      Tables
+    </h2>
+    
+    <div class="content-block__intro">
+      A table in LinkSpace is comparable to a worksheet in a spreadsheet. Here you can enter, create, edit, and delete your tables.
+    </div>
+  </div>
+  
+  <div class="content-block__aside col-lg-6">
+    [% IF user.permission.superadmin %]
+    <form action="[% url.page %]/table/0">
+    <button
+      type="button"
+      class="btn btn-add"
+    >
+      <span class="btn__title">New table</span>
+    </button>
     [% END %]
-</table>
+  </div>
+
+</div>
+
+<div class="content-block__main">
+  [%
+    table_config = '{
+      "dom":"t",
+      "order":[[0,"asc"]],
+      "language":{},
+      "responsive":{
+        "details":{"type":"column","target":-1}
+      },
+      "autoWidth":false,
+      "columns":[
+        {"name":"Table","orderable":true,"width":"70%"},
+        {"name":"","orderable":false,"className":"min-tablet-l"},
+        {"name":"","orderable":false,"className":"min-tablet-l"},
+        {"name":"","orderable":false,"className":"min-tablet-l"},
+        {"name":"","orderable":false,"className":"min-tablet-l"},
+        {"orderable":false, "className":"dtr-control","targets":-1}
+      ]
+    }';
+    header_row = {
+      fields = [
+        {
+          type  = "header"
+          label = "TABLE"
+        },
+        {type  = "header"},
+        {type  = "header"},
+        {type  = "header"},
+        {type  = "header"},
+        {type  = "header"}
+      ]
+    };
+    rows = [];
+  
+    FOREACH instance IN instances;
+      instance_row = {
+        fields = [
+          {
+            type  = "link"
+            label = instance.name
+            link  = "/" _ instance.identifier _ "/data"
+          },
+          {
+            type  = "button"
+            label = "View records"
+            link  = "/" _ instance.identifier _ "/data"
+          },
+          {
+            type  = "button"
+            label = "Dashboard"
+            link  = "/" _ instance.identifier _ "/"
+          },
+          {
+            type  = "button"
+            label = "Permissions"
+            link  = "/table/" _ instance.instance_id _ "/permissions"
+          },
+          {
+            type  = "button"
+            label = "Edit table"
+            link  = "/table/" _ instance.instance_id _ "/edit"
+          },
+          {type  = "text"}
+        ]
+      };
+  
+      IF user.permission.superadmin;
+        # instance_row.fields.push();
+      END;
+  
+      IF layout.user_can("layout");
+        # instance_row.fields.push();
+      END;
+      
+      rows.push(instance_row);
+    END;
+  
+    INCLUDE tables/basic_table.tt;
+  %]
+</div>
