--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -37,9 +37,9 @@
           <li class="nav__item">
             <a class="nav__link nav__link--support" href="[% url.page %]/support/"><span>Support</span></a>
           </li>
-          [% IF user.permission.superadmin %]
+          [% IF user.permission.useradmin OR user.permission.superadmin %]
           <li class="nav__item">
-            <a class="nav__link nav__link--settings" href="[% url.page %]/system/"><span>Admin Settings</span></a>
+            <a class="nav__link nav__link--settings" href="[% url.page %]/settings/"><span>Admin Settings</span></a>
           </li>
           [% END %]
         </ul>
