Fix grey screen of death when using subrecord view

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -283,6 +283,7 @@
 
 [% PROCESS snippets/record_readmore.tt %]
 
+[% UNLESS edit_modal OR view_modal %]
 <div class="modal fade" id="curval_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-dateformat-datepicker="[% config.dateformat_datepicker %]">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -294,7 +295,6 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-[% UNLESS edit_modal %]
     <div class="modal fade" id="helptext_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
