Implement design review consistency changes

--- a/views/admin_settings.tt
+++ b/views/admin_settings.tt
@@ -13,16 +13,16 @@
 <div class="content-block__main">
   
   [% IF user.permission.useradmin %]
-  <p><strong>User settings</strong></p>
+  <h3>User settings</h3>
   
   <div class="row mb-5">
     
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/title/" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--user"></div>
           <span> Manage titles </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
@@ -35,10 +35,10 @@
     [% IF site.register_show_organisation %]
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/organisation/" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--organisation"></div>
           <span> Manage [% site.organisation_name | html %]s </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
@@ -52,10 +52,10 @@
     [% IF site.register_show_department %]
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/department/" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--department"></div>
           <span> Manage [% site.department_name | html %]s </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
@@ -69,10 +69,10 @@
     [% IF site.register_show_team %]
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/team/" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--groups"></div>
           <span> Manage [% site.team_name | html %]s </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
@@ -85,10 +85,10 @@
     
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/audit/" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--table"></div>
           <span> User audit logs </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
@@ -102,16 +102,16 @@
   [% END %]
   
   [% IF user.permission.superadmin %]
-  <p><strong>System wide settings</strong></p>
+  <h3>System wide settings</h3>
   
   <div class="row">
     
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/system/email" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--email"></div>
           <span> Default welcome email </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
@@ -124,10 +124,10 @@
     
     <div class="col-md-4 col-sm-6 mb-3">
       <a href="[% url.page %]/system/userdetails" class="card card--settings">
-        <h3 class="card__title">
+        <h4 class="card__title">
           <div class="card__title-icon card__title-icon--settings"></div>
           <span> User-editable personal details </span>
-        </h3>
+        </h4>
         
         <div class="card__body row">
           <div class="card__content">
