--- a/views/reset_password_request.tt
+++ b/views/reset_password_request.tt
@@ -12,8 +12,11 @@
   </div>
   
   <div class="login__fields">
-    <fieldset class="form-group">
-      <legend class="form-group__legend fieldset__legend--hidden">Reset password</legend>
+    <fieldset class="fieldset">
+      <legend class="fieldset__legend fieldset__legend--hidden">
+        Reset password
+      </legend>
+      <input type="hidden" name="csrf_token" value="[% csrf_token %]">
       [%
         INCLUDE fields/input.tt
           id = "emailreset"
@@ -36,10 +39,4 @@
     </button>
   
   </div>
-  
-  <input type="hidden" name="csrf_token" value="[% csrf_token %]">
 </form>
-
-<div class="login__subtext">
-  <a href="[% url.page %]/">Back to login</a>
-</div>
