--- a/views/snippets/header_detail.tt
+++ b/views/snippets/header_detail.tt
@@ -3,7 +3,7 @@
       <div class="col-lg-2 offset-lg-10 p-0">
         <div class="user dropdown">
           <button class="user__toggle btn btn-default dropdown-toggle" type="button" id="usermenu"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span>User menu</span>
           </button>
           <ul class="user__menu dropdown-menu dropdown-menu-right" aria-labelledby="usermenu">
