--- a/views/user.tt
+++ b/views/user.tt
@@ -2,7 +2,7 @@
 [% edituser = users.shift %]
 [% END %]
 <div class="content-block__head row">
-  <div class="content-block__info col-lg-8">
+  <div class="content-block__info col-lg-6">
     <h2 class="content-block__title">
       My Details
     </h2>
@@ -15,79 +15,77 @@
 
 <div class="content-block__main">
   <form method="post">
-    <fieldset class="form-group">
-      <legend class="form-group__legend fieldset__legend--hidden">My details</legend>
+    <fieldset class="fieldset">
+      <legend class="fieldset__legend fieldset__legend--hidden">My details</legend>
       <input type="hidden" name="csrf_token" value="[% csrf_token %]">
       <input type="hidden" name="page" value="[% page %]">
       <input type="hidden" name="username" value="[% edituser.username | html_entity %]">
       <input type="hidden" name="id" value="[% edituser.id %]">
-      <div class="content-block__main">
-        [% field_counter = 0 %]
-        [% IF site.user_fields.size > 0 %]
-        <div class="row">
-        [% END %]
-        [% FOREACH field IN site.user_fields %]
-          [% IF field_counter > 0 AND field_counter % 2 == 0 %]
-        </div>
-        <div class="row">
-          [% END %]
-          [% field_disabled = NOT field.editable ? 1 : 0; %]
-          <div class="col-lg-5">
-            [%
-              IF field.name == "email";
-                field_type = "email";
-                sub_field  = "fields/sub/modal_link.tt";
-                sub_params = {
-                  label => "Change password"
-                };
-              ELSE;
-                field_type = "text";
-                sub_field  = "";
-                sub_params = {};
-              END;
-            
-              IF field.type == "freetext";
-                INCLUDE fields/input.tt
-                  id = field.name
-                  name = field.name
-                  value = edituser.${field.name}
-                  label = field.description
-                  placeholder = field.placeholder
-                  type = field_type
-                  disabled = field_disabled
-                  is_html = 1
-                  sub_field = sub_field
-                  sub_params = sub_params;
-            
-              ELSIF field.type == "dropdown";
-                INCLUDE fields/select.tt
-                  id = field.name
-                  name = field.name
-                  value = edituser.${field.name}
-                  label = field.description
-                  placeholder = field.placeholder
-                  items = values.${field.name}
-                  is_html = 1
-                  sub_field = sub_field
-                  sub_params = sub_params;
-              END;
-            %]
-          </div>
-          [% IF field.name == "email"; field_counter = field_counter + 2; ELSE; field_counter = field_counter + 1; END; %]
-        [% END %]
-        [% IF site.user_fields.size > 0 %]
-        </div>
-        [% END %]
-        
-        <button
-          type="submit"
-          name="submit"
-          value="1"
-          class="btn btn-default"
-        >
-          <span class="btn__title">Save</span>
-        </button>
+      [% field_counter = 0 %]
+      [% IF site.user_fields.size > 0 %]
+      <div class="row">
+      [% END %]
+      [% FOREACH field IN site.user_fields %]
+        [% IF field_counter > 0 AND field_counter % 2 == 0 %]
       </div>
+      <div class="row">
+        [% END %]
+        [% field_disabled = NOT field.editable ? 1 : 0; %]
+        <div class="col-lg-5">
+          [%
+            IF field.name == "email";
+              field_type = "email";
+              sub_field  = "fields/sub/modal_link.tt";
+              sub_params = {
+                label => "Change password"
+              };
+            ELSE;
+              field_type = "text";
+              sub_field  = "";
+              sub_params = {};
+            END;
+          
+            IF field.type == "freetext";
+              INCLUDE fields/input.tt
+                id = field.name
+                name = field.name
+                value = edituser.${field.name}
+                label = field.description
+                placeholder = field.placeholder
+                type = field_type
+                disabled = field_disabled
+                is_html = 1
+                sub_field = sub_field
+                sub_params = sub_params;
+          
+            ELSIF field.type == "dropdown";
+              INCLUDE fields/select.tt
+                id = field.name
+                name = field.name
+                value = edituser.${field.name}
+                label = field.description
+                placeholder = field.placeholder
+                items = values.${field.name}
+                is_html = 1
+                sub_field = sub_field
+                sub_params = sub_params;
+            END;
+          %]
+        </div>
+        [% IF field.name == "email"; field_counter = field_counter + 2; ELSE; field_counter = field_counter + 1; END; %]
+      [% END %]
+      [% IF site.user_fields.size > 0 %]
+      </div>
+      [% END %]
+      
+      <button
+        type="submit"
+        name="submit"
+        value="1"
+        class="btn btn-default"
+      >
+        <span class="btn__title">Save</span>
+      </button>
     </fieldset>
   </form>
 </div>
